<resources>
    <string name="app_name">VOLUMENES Y AREAS</string>
    <string name="cilindro">Cilindro</string>
    <string name="valorRadio">Valor del radio</string>
    <string name="valorAltura">Valor Altura</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="resultado">Resultado</string>
    <string name="volumen">Volumen</string>
    <string name="circulo">Circulo</string>
    <string name="area">Area</string>
    <string name="cono">Cono</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="valorLado">Valor del lado</string>
    <string name="cubo">Cubo</string>
    <string name="valorArista">Valor Arista</string>
    <string name="esfera">Esfera</string>
    <string name="realizadas">Realizadas</string>
    <string name="operacion">Operacion</string>
    <string name="datos">Datos</string>
    <string name="opciones">Opciones</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="valorBase">Valor Base</string>
    <string name="triangulo">Triangulo</string>
    <string-array name="Combinaciones">
        <item>@string/area</item>
        <item>@string/volumen</item>
        <item>@string/realizadas</item>
    </string-array>
    <string-array name="Areas">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </string-array>
    <string-array name="Volumenes">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </string-array>
</resources>
