<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtRectangulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/rectangulo"
        android:text="@string/rectangulo"
        android:textAlignment="center"
        android:textSize="32dp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtBase"
            android:layout_width="157dp"
            android:layout_height="match_parent"
            android:hint="@string/valorBase"
            android:text="@string/valorBase"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cajaBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtAltura"
            android:layout_width="153dp"
            android:layout_height="match_parent"
            android:hint="@string/valorAltura"
            android:text="Valor de la Altura"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cajaAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/calcular"
            android:onClick="Rectangulo1"
            android:text="Calcular" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Borrar"
            android:id="@+id/btnBorrar"
            android:hint="@string/borrar"
            android:onClick="Borrar"/>
    </LinearLayout>
</LinearLayout>
