<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.redes.volumenesyareas.Cubo1">

    <TextView
        android:id="@+id/txtCubo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cubo"
        android:text="@string/cubo"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCubo"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout6">

        <TextView
            android:id="@+id/txtValorArista"
            android:layout_width="124dp"
            android:layout_height="match_parent"
            android:text="@string/valorArista"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cajaArista"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout6"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:hint="@string/calcular"
            android:onClick="Cubo1"
            android:text="Calcular" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:hint="@string/borrar"
            android:text="Borrar"
            android:onClick="BorrarCubo"/>
    </LinearLayout>
</RelativeLayout>
