<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.redes.volumenesyareas.Esfera1">

    <TextView
        android:id="@+id/txtEsfera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/esfera"
        android:text="@string/esfera"
        android:textAlignment="center"
        android:textSize="36dp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtvalorRadio"
        android:layout_below="@+id/txtEsfera"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/txtValorRadio"
            android:layout_width="172dp"
            android:layout_height="match_parent"
            android:hint="@string/valorRadio"
            android:text="Valor del Radio"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cajaRadio"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtvalorRadio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/linearLayout8">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/calcular"
            android:onClick="Esfera1"
            android:text="Calcular" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/borrar"
            android:onClick="BorrarEsfera"
            android:text="Borrar" />
    </LinearLayout>
</RelativeLayout>
