<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.redes.volumenesyareas.Triangulo1">

    <TextView
        android:id="@+id/txtTriangulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/triangulo"
        android:text="@string/triangulo"
        android:textAlignment="center"
        android:textSize="36dp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/txtTriangulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtBase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.32"
            android:hint="@string/valorBase"
            android:text="Valor de la Base"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cajaBase"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.61"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtValorRadio"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/txtAltura"
            android:layout_width="151dp"
            android:layout_height="51dp"
            android:layout_weight="0.29"
            android:hint="@string/valorAltura"
            android:text="Valor de la Altura"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cajaAltura"
            android:layout_width="162dp"
            android:layout_height="match_parent"
            android:layout_weight="0.81"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout9"
        android:layout_below="@+id/txtValorRadio"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/calcular"
            android:onClick="Triangulo1"
            android:text="Calcular" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/borrar"
            android:onClick="Borrar"
            android:text="Borrar" />
    </LinearLayout>
</RelativeLayout>
