<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rectangulo"
        android:id="@+id/txtRectangulo"
        android:layout_gravity="center_horizontal"
        android:hint="@string/rectangulo"
        android:textSize="32dp"
        android:layout_weight="0.04" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Resultado"
        android:id="@+id/txtResultado"
        android:layout_gravity="center_horizontal"
        android:textSize="26dp"
        android:hint="@string/resultado"
        android:layout_weight="0.03" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1"
        android:layout_weight="0.04">

        <TextView
            android:id="@+id/txtArea"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:hint="@string/area"
            android:text="Area: "
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtResultadoCaja"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ok"
        android:id="@+id/btnOk"
        android:layout_gravity="center_horizontal"
        android:onClick="VolverRectangulo"/>
</LinearLayout>
