<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.redes.volumenesyareas.Cubo2">

    <TextView
        android:id="@+id/txtCubo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/cubo"
        android:text="Cubo"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCubo"
        android:layout_centerHorizontal="true"
        android:hint="@string/resultado"
        android:text="Resultado"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtResultado"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout7">

        <TextView
            android:id="@+id/txtVolumen"
            android:layout_width="141dp"
            android:layout_height="39dp"
            android:hint="@string/volumen"
            android:text="Volumen: "
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCajaResultado"
            android:layout_width="184dp"
            android:layout_height="27dp"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtResultado"
        android:layout_alignRight="@+id/txtResultado"
        android:layout_below="@+id/linearLayout7"
        android:text="Ok"
        android:onClick="VolverCubo"/>
</RelativeLayout>
