<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.redes.volumenesyareas.Cono1">

    <TextView
        android:id="@+id/txtCono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/cono"
        android:text="@string/cono"
        android:textAlignment="center"
        android:textSize="36dp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/txtCono"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:hint="@string/valorRadio"
            android:text="Valor del Radio"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cajaRadio"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:hint="@string/valorAltura"
            android:text="Valor de la Altura"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cajaAltura"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignLeft="@+id/linearLayout4"
        android:layout_alignStart="@+id/linearLayout4"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_alignEnd="@+id/linearLayout3">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout3"
            android:layout_alignStart="@+id/linearLayout3"
            android:layout_below="@+id/linearLayout4"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:elevation="1dp"
            android:hint="@string/calcular"
            android:onClick="Cono1"
            android:text="Calcular"
            android:layout_weight="0.21" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout4"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_toEndOf="@+id/btnCalcular"
            android:layout_toRightOf="@+id/btnCalcular"
            android:layout_weight="0.37"
            android:hint="@string/borrar"
            android:onClick="BorrarCono"
            android:text="Borrar" />
    </LinearLayout>

</RelativeLayout>
