<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/txtCirculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/circulo"
        android:text="@string/circulo"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        android:layout_weight="0.04" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:hint="@string/resultado"
            android:text="Resultado"
            android:textAlignment="center"
            android:textSize="24dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/txtArea"
            android:layout_width="129dp"
            android:layout_height="match_parent"
            android:hint="@string/area"
            android:text="@string/area"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCajaResultado"
            android:layout_width="117dp"
            android:layout_height="39dp"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ok"
        android:id="@+id/btnOk"
        android:layout_gravity="center_horizontal"
        android:onClick="VolverCirculo"/>

</LinearLayout>
