<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.redes.volumenesyareas.Cilindro1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCilindro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.31"
            android:hint="@string/cilindro"
            android:textAlignment="center"
            android:textSize="36dp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/txtValorRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        android:layout_alignRight="@+id/linearLayout10"
        android:layout_alignEnd="@+id/linearLayout10"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2">

        <TextView
            android:id="@+id/txtRadio"
            android:layout_width="141dp"
            android:layout_height="45dp"
            android:hint="@string/valorRadio"
            android:text="@string/valorRadio"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cajaRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/txtValorRadio"
        android:layout_alignRight="@+id/linearLayout10"
        android:layout_alignEnd="@+id/linearLayout10"
        android:layout_alignLeft="@+id/linearLayout10"
        android:layout_alignStart="@+id/linearLayout10">

        <TextView
            android:id="@+id/txtAltura"
            android:layout_width="117dp"
            android:layout_height="match_parent"
            android:hint="@string/valorAltura"
            android:text="@string/valorAltura"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cajaAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_weight="0.99" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout10">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtCilindro"
            android:layout_alignStart="@+id/txtCilindro"
            android:layout_below="@+id/linearLayout2"
            android:hint="@string/calcular"
            android:onClick="Cilindro1"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button"
            android:layout_toEndOf="@+id/button"
            android:layout_toRightOf="@+id/button"
            android:hint="@string/borrar"
            android:onClick="BorrarCilindro"
            android:text="@string/borrar" />
    </LinearLayout>

</RelativeLayout>
