<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.redes.volumenesyareas.Esfera2">

    <TextView
        android:id="@+id/txtEsfera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/esfera"
        android:text="Esfera"
        android:textAlignment="center"
        android:textSize="36dp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtEsfera"
        android:layout_alignStart="@+id/txtEsfera"
        android:layout_below="@+id/txtEsfera"
        android:hint="@string/resultado"
        android:text="Resultado"
        android:textSize="24dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtValorRadio"
        android:layout_below="@+id/txtResultado"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/txtVolumen"
            android:layout_width="116dp"
            android:layout_height="44dp"
            android:hint="@string/volumen"
            android:text="Volumen"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCajaResultado"
            android:layout_width="224dp"
            android:layout_height="31dp"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ok"
        android:id="@+id/idOk"
        android:onClick="VolverEsfera"
        android:layout_below="@+id/txtValorRadio"
        android:layout_alignLeft="@+id/txtResultado"
        android:layout_alignStart="@+id/txtResultado" />
</RelativeLayout>
